<resources>
    <string name="app_name">Tusk Manager</string>
    <string name="empty_task_explained">You haven\'t created any tasks yet.\nYou should try it!</string>
    <string name="start_planning">Start Planning</string>
    <string name="task">Task yourself</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="pick_category">Pick a category</string>
    <string name="task_description">Write a description for your task</string>
    <string name="task_title">Give your task a title</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="pick_icon">Pick a category icon</string>
    <string name="category_name">Category name</string>
    <string name="pick_color">Pick a category color</string>
    <string name="sort">Sort</string>
    <string name="empty_task_list_completed">No completed tasks to display</string>
    <string name="empty_task_list_explained_completed">Complete a task first!</string>
    <string name="empty_task_list">Start Planning</string>
    <string name="empty_task_list_explained">You haven\'t created any tasks yet.\nYou should try it!</string>
    <string name="today">Tasks due today</string>
    <string name="tasks_due_this_week">Tasks due this week</string>
    <string name="tasks_due_next_week">Tasks due next week</string>
    <string name="search">Search...</string>
    <string name="tasks_list">Tasks list</string>
    <string name="search_by_time_due">Search by time due</string>
</resources>
